modified: 02_web.html

--- a/02_web.html
+++ b/02_web.html
@@ -72,7 +72,7 @@
 
     <body>
         <h1 id="header" class="colorRojo">Título</h1>
-        <p>En un lugar de la Mancha, de cuyo nombre no quiero acordarme, no ha mucho tiempo que vivía un hidalgo de los de lanza en astillero, adarga antigua, rocín flaco y galgo corredor.</p>
+        <p>En un lugar de la Mancha, de cuyo nombre no quiero acordarme, no hace mucho tiempo que vivía un hidalgo de los de lanza en astillero, adarga antigua, rocín flaco y galgo corredor.</p>
         
         
         <h2 class="colorRojo">Sub Título</h2>
